# HarpoonClient

./: CMakeLists.txt
icons/: icons.qrc
src/: BacklogView.cpp  BacklogView.hpp  Channel.cpp  Channel.hpp  ChatLine.cpp  ChatLine.hpp  ChatUi.cpp  ChatUi.hpp  ChatUi_Impl.cpp  ChatUi_Impl.hpp  Client.cpp  Client.hpp  GraphicsHandle.cpp  GraphicsHandle.hpp  HarpoonClient.cpp  HarpoonClient.hpp  Host.cpp  Host.hpp  Server.cpp  Server.hpp  SettingsDialog.cpp  SettingsDialog.hpp  TreeEntry.cpp  TreeEntry.hpp  User.cpp  User.hpp  UserGroup.cpp  UserGroup.hpp  main.cpp  version.hpp
src/backlog/: BacklogModel.cpp  BacklogModel.hpp
src/channellist/: ChannelListWidget.cpp  ChannelListWidget.hpp  ChannelTreeItem.cpp  ChannelTreeItem.hpp  ChannelTreeModel.cpp  ChannelTreeModel.hpp
src/irc/: IrcBacklogView.cpp  IrcBacklogView.hpp  IrcChannel.cpp  IrcChannel.hpp  IrcChatLine.cpp  IrcChatLine.hpp  IrcHost.cpp  IrcHost.hpp  IrcServer.cpp  IrcServer.hpp  IrcUser.cpp  IrcUser.hpp  IrcUserGroup.cpp  IrcUserGroup.hpp
src/models/: ChannelTreeModel.cpp  ChannelTreeModel.hpp  HostTreeModel.cpp  HostTreeModel.hpp  NickModel.cpp  NickModel.hpp  ServerTreeModel.cpp  ServerTreeModel.hpp  SettingsTypeModel.cpp  SettingsTypeModel.hpp  UserTreeModel.cpp  UserTreeModel.hpp
src/models/irc/: IrcChannelTreeModel.cpp  IrcChannelTreeModel.hpp  IrcHostTreeModel.cpp  IrcHostTreeModel.hpp  IrcNickModel.cpp  IrcNickModel.hpp  IrcServerTreeModel.cpp  IrcServerTreeModel.hpp  IrcUserTreeModel.cpp  IrcUserTreeModel.hpp
src/serversettings/: SettingsServerTreeModel.cpp  SettingsServerTreeModel.hpp
src/userlist/: UserTreeModel.cpp  UserTreeModel.hpp
ui_forms/: about.ui  client.ui  editHostEntry.ui  editNickEntry.ui  editServerEntry.ui  ircSettings.ui  serverConfigurationDialog.ui  settings.ui
